--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -17,7 +18,6 @@
                 <li><a href="#Products">Products</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <!-- <p>Sign up</p> -->
         </header>
         <div id="home" class="texts">
             <h1>Online<span>Shop</span></h1>
@@ -99,9 +99,10 @@
                 <div class="footer_cal">
                     <h4>Follow Us</h4>
                         <div class="social">
-                            <a href="#"><img src="facebook.png"></a>
-                        <a href="https://www.instagram.com/stickit.1?igsh=MWZrdHVtMTlhMTlyMA== " target="_blank"><img src="instagram.png" alt="instagram"></a>
-                        <a href="https://wa.me/201205749083"><img src="whats.png" alt="WhatsApp"></a>
+                            
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/stickit.1?igsh=MWZrdHVtMTlhMTlyMA== " target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://wa.me/201205749083"><i class="fa-brands fa-whatsapp"></i></a>
                         </div>
                 </div>
             </div>
