--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Website</title>
+    <!-- CDN for Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Below is the code for handling the icon -->
+    <link rel="icon" type="image/png" href="./data/Img/shopping-cart.png">
 </head>
 <body>
     <section>
@@ -24,26 +27,26 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quod corrupti nihil iure voluptas quam quae assumenda qui laboriosam recusandae iusto, provident natus labore deserunt, sit nulla quaerat. Inventore, fugiat!</p>
         </div>
         <div class="background_image">
-            <img src="Online.avif">
+            <img src="/data/Img/Online.avif">
         </section>
         <div class="clothes">
           <h1 id="Products">Products</h1>
           <p id="stickers">---stickers---</p>
           <div class="clothes_box">
               <div class="clothes_card">
-                  <img src="Messi.jpg">
+                  <img src="./data/Img/Messi.jpg">
                   <h1>Stickers</h1>
               </div>
               <div class="clothes_card">
-                  <img src="Messi.jpg">
+                  <img src="./data/Img/Messi.jpg">
                   <h1>Stickers</h1>
               </div>
               <div class="clothes_card">
-                  <img src="Messi.jpg">
+                  <img src="./data/Img/Messi.jpg">
                   <h1>Stickers</h1>
               </div>
               <div class="clothes_card">
-                  <img src="Messi.jpg">
+                  <img src="./data/Img/Messi.jpg">
                   <h1>Stickers</h1>
               </div>
           </div>
@@ -52,19 +55,19 @@
             <p id="mugs">---Mugs---</p>
             <div class="Mugs_box">
                 <div class="Mugs_card">
-                    <img src="Mugs.jpg">
+                    <img src="./data/Img/Messi.jpg">
                     <h1>Mugs</h1>
                 </div>
                 <div class="Mugs_card">
-                    <img src="Mugs.jpg">
+                    <img src="./data/Img/Messi.jpg">
                     <h1>Mugs</h1>
                 </div>
                 <div class="Mugs_card">
-                    <img src="Mugs.jpg">
+                    <img src="./data/Img/Messi.jpg">
                     <h1>Mugs</h1>
                 </div>
                 <div class="Mugs_card">
-                    <img src="Mugs.jpg">
+                    <img src="./data/Img/Messi.jpg">
                     <h1>Mugs</h1>
                 </div>
             </div>
