--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <p id="mugs">---Mugs---</p>
             <div class="Mugs_box">
                 <div class="Mugs_card">
-                    <img src="./data/Img/Messi.jpg">
+                    <img src="./data/Img/Mugs.jpg">
                     <h1>Mugs</h1>
                 </div>
                 <div class="Mugs_card">
-                    <img src="./data/Img/Messi.jpg">
+                    <img src="./data/Img/Mugs.jpg">
                     <h1>Mugs</h1>
                 </div>
                 <div class="Mugs_card">
-                    <img src="./data/Img/Messi.jpg">
+                    <img src="./data/Img/Mugs.jpg">
                     <h1>Mugs</h1>
                 </div>
                 <div class="Mugs_card">
-                    <img src="./data/Img/Messi.jpg">
+                    <img src="./data/Img/Mugs.jpg">
                     <h1>Mugs</h1>
                 </div>
             </div>
