--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quod corrupti nihil iure voluptas quam quae assumenda qui laboriosam recusandae iusto, provident natus labore deserunt, sit nulla quaerat. Inventore, fugiat!</p>
         </div>
         <div class="background_image">
-            <img src="/data/Img/Online.avif">
+            <img src="./data/Img/Online.avif">
         </section>
         <div class="clothes">
           <h1 id="Products">Products</h1>
