Some changing in mt HTML committed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <div class="circle"></div>
             <div class="circles"></div>
-            <a href="#" class="logo">Online<span>forfun</span></a>
+            <a href="#" class="logo">Online<span>Store</span></a>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#Products">Products</a></li>
@@ -23,7 +23,7 @@
             </ul>
         </header>
         <div id="home" class="texts">
-            <h1>Online<span>Shop</span></h1>
+            <h1>Online<span>Shopping</span></h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quod corrupti nihil iure voluptas quam quae assumenda qui laboriosam recusandae iusto, provident natus labore deserunt, sit nulla quaerat. Inventore, fugiat!</p>
         </div>
         <div class="background_image">
