--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                         <div class="social">
                             
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/stickit.1?igsh=MWZrdHVtMTlhMTlyMA== " target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://wa.me/201205749083"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/stickit.1" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://wa.me/201205749083" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                         </div>
                 </div>
             </div>
