--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-12 col-lg-6 d-flex justify-content-center">
               <img
                 class="img-fluid"
-                src="./data/Img/Online.png"
+                src="./data/Img/online.png"
                 alt="Shopping Cart image"
                 width="450px"
               />
