Added hover animation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <!-- TODO Add the links -->
   <body>
@@ -107,7 +108,7 @@
         <div class="container row m-5">
           <h2 class="text-center w-100 my-5">Stickers</h2>
           <!-- Stickers Items -->
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
@@ -120,7 +121,7 @@
               </figure>
             </div>
           </div>
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
@@ -133,7 +134,7 @@
               </figure>
             </div>
           </div>
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
@@ -146,7 +147,7 @@
               </figure>
             </div>
           </div>
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
@@ -161,7 +162,7 @@
           </div>
           <h2 class="text-center w-100 my-5">Mugs</h2>
           <!-- Mugs Items -->
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
@@ -174,7 +175,7 @@
               </figure>
             </div>
           </div>
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
@@ -187,7 +188,7 @@
               </figure>
             </div>
           </div>
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
@@ -200,7 +201,7 @@
               </figure>
             </div>
           </div>
-          <div class="col-6 col-md-3 mb-4">
+          <div class="col-6 col-md-3 mb-4 scale-on-hover">
             <div class="p-2 border rounded-2" style="background-color: #4682b4">
               <figure class="text-center">
                 <img
