'my last change in my code'

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               id="btnToggleDarkMode"
               width="40px"
             />
-            <span>Dark Mode Toggle</span>
+            <span>Dark Mode</span>
           </div>
         </div>
       </div>
